# pjh_cli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  extra.cpp  hello.cpp  help_demo.cpp  help_example.cpp  options.cpp  positional.cpp  repl.cpp  subcommands.cpp
include/: pjh_cli.hpp
include/pjh_cli/: app.hpp  arg_def.hpp  command.hpp  console.hpp  converter.hpp  core.hpp  error.hpp  fixed_string.hpp  format.hpp  help_formatter.hpp  hint.hpp  info.hpp  matcher.hpp  option.hpp  option_def.hpp  parse.hpp  parse_context.hpp  parser.hpp  token.hpp  type.hpp
include/pjh_cli/command/: base_command.hpp  branch_command.hpp  leaf_command.hpp
include/pjh_cli/core/: converter.hpp  error.hpp  type.hpp
include/pjh_cli/detail/: apply_value.hpp  command_utils.hpp  concept.hpp  env_snapshot.hpp  option_chain.hpp  string_utils.hpp  tokenizer.hpp
include/pjh_cli/format/: help_formatter.hpp  hint.hpp  info.hpp  matcher.hpp
include/pjh_cli/option/: arg_def.hpp  bool_option.hpp  count_option.hpp  enum_option.hpp  float_option.hpp  int_option.hpp  option_def.hpp  path_option.hpp  str_option.hpp
include/pjh_cli/option/mixin/: with_choices.hpp  with_default.hpp  with_env.hpp  with_negatable.hpp  with_range.hpp  with_repeatable.hpp  with_required.hpp
include/pjh_cli/parse/: parse_context.hpp  parser.hpp
src/: app.cpp  command.cpp  console.cpp  converter.cpp  help.cpp  hint.cpp  matcher.cpp  parser.cpp  tokenizer.cpp
tests/: CMakeLists.txt  test_command.cpp  test_command_utils.cpp  test_console.cpp  test_converter.cpp  test_error.cpp  test_fixed_string.cpp  test_help.cpp  test_hint.cpp  test_matcher.cpp  test_parse_concurrent.cpp  test_parse_context.cpp  test_parser.cpp  test_string_utils.cpp  test_tokenizer.cpp
tests/console/: test_basics.cpp  test_free_functions.cpp  test_helpers.hpp  test_process_line_help.cpp  test_process_line_parse.cpp
tests/option/: test_bool_option.cpp  test_count_option.cpp  test_enum_option.cpp  test_env_option.cpp  test_float_option.cpp  test_int_option.cpp  test_path_option.cpp  test_str_option.cpp
tests/parser/: test_dash.cpp  test_errors.cpp  test_flags.cpp  test_groups.cpp  test_helpers.hpp  test_options.cpp  test_positional.cpp  test_subcommands.cpp
