option(PJH_CLI_BUILD_EXAMPLES "Build example programs" OFF)

if(PJH_CLI_BUILD_EXAMPLES)
    function(add_cli_example name)
        add_executable(${name} ${name}.cpp)
        target_link_libraries(${name} PRIVATE pjh_cli)
    endfunction()

    add_cli_example(hello)
    add_cli_example(options)
    add_cli_example(subcommands)
    add_cli_example(positional)
    add_cli_example(repl)
    add_cli_example(extra)
    add_cli_example(help_example)
    add_cli_example(help_demo)
endif()
